# AtherOS

./: .gitignore  Dockerfile  README.md  atheros.db  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test.txt  test_store.json
.github/workflows/: ci.yml  release.yml  tests.yml
backend/: atheros_config.json  memory.json  memory_backup.json
backend/app/: main.py
backend/app/agents/: base.py  collaboration.py  communication.py  conflict.py  consensus.py  controller.py  coordinator.py  delegation.py  discovery.py  event_router.py  heartbeat.py  identity.py  integration.py  knowledge_exchange.py  logs.py  manager.py  message_bus.py  metrics.py  permissions.py  profile.py  registry.py  roles.py  security.py  shared_context.py  shared_memory.py  specialized.py  swarm.py  team_planning.py  types.py
backend/app/api/: app.py  deps.py  schemas.py  websocket.py
backend/app/automation/: agent.py  chain.py  conditional.py  controller.py  core.py  event.py  history.py  integration.py  intelligence.py  metrics.py  optimizer.py  recovery.py  rules.py  scheduler.py  security.py  tool.py  trigger.py  workflow.py
backend/app/backup/: __init__.py  manager.py  types.py
backend/app/beta/: analytics.py  build.py  compatibility.py  controller.py  core.py  crash.py  environment.py  feedback.py  integration.py  release.py
backend/app/cloud/: account_sync.py  agent_sync.py  backup.py  conflict_resolver.py  controller.py  core.py  device_sync.py  file_sync.py  integration.py  intelligence.py  memory_sync.py  metrics.py  offline.py  plugin_sync.py  restore.py  security.py  workflow_sync.py  workspace_sync.py
backend/app/cluster/: manager.py  types.py
backend/benchmarks/: __init__.py  __main__.py  reporter.py  suite.py
backend/test_folder/: test.txt
backend/tests/: requirements.txt  test_agents_block_11_15.py  test_agents_block_16_20.py  test_agents_block_1_5.py  test_agents_block_21_25.py  test_agents_block_6_10.py  test_async_executor.py  test_audit.py  test_code_tool.py  test_config.py  test_config_tool.py  test_context.py  test_database.py  test_engine.py  test_engine_planner.py  test_env_tool.py  test_exceptions.py  test_execution_block_11_15.py  test_execution_block_16_20.py  test_execution_block_1_5.py  test_execution_block_21_25.py  test_execution_block_6_10.py  test_file_tool.py  test_intelligence_block_11_15.py  test_intelligence_block_16_20.py  test_intelligence_block_1_5.py  test_intelligence_block_6_10.py  test_journal.py  test_log_tool.py  test_long_memory.py  test_main.py  test_memory_block_15_20.py  test_memory_compressor.py  test_memory_context.py  test_memory_ranker.py  test_memory_retriever.py  test_memory_search.py  test_memory_summarizer.py  test_network_tool.py  test_package_tool.py  (+70 more)
desktop/tests/: test_desktop_block_11_15.py  test_desktop_block_16_20.py  test_desktop_block_1_5.py  test_desktop_block_21_25.py  test_desktop_block_26_30.py  test_desktop_block_31_35.py  test_desktop_block_6_10.py  test_v13_complete.py
docs/: 01_VISION.md  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  NEXT_STEPS.md  README.md  SETUP.md  deployment.md  developer_guide.md  plugin_sdk.md
scripts/: build_linux.sh  build_windows.bat
test_folder/: test.txt
(+528 files in other folders)
