[project]
name = "atheros"
version = "1.0.0rc1"
description = "AtherOS — Production AI Operating System"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "AtherOS Team" }]
requires-python = ">=3.12"
keywords = ["AI", "operating-system", "agents", "LLM", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/slassssh/AtherOS"
Repository = "https://github.com/slassssh/AtherOS"

[project.scripts]
atheros-api = "backend.app.main:main"
atheros-bench = "backend.benchmarks.__main__:main"

# ─── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git", ".venv", "__pycache__", "*.egg-info",
    "backend/tests/", "backend/benchmarks/",
    "desktop/", "docs/", "scripts/",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",   # line too long — handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # complexity
    "UP007",  # X | Y union syntax — requires Python 3.10+
    "B905",   # zip() without strict=
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

# ─── Black ───────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py312", "py313"]
extend-exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | desktop
  | docs
)/
'''

# ─── MyPy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_defs = false
exclude = ["backend/tests/", "desktop/", "docs/", "scripts/"]

# ─── Bandit ──────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["backend/tests", "desktop", "docs", ".venv"]
skips = ["B101", "B311", "B603", "B607"]  # assert, random, subprocess (reviewed)
severity = "medium"

# ─── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-q",
]

# ─── Coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["backend/app"]
omit = [
    "*/tests/*",
    "*/benchmarks/*",
    "*/__pycache__/*",
    "*/beta/*",
    "*/cloud/*",
    "*/collaboration/*",
    "*/marketplace/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]